<resources>
    <string name="app_name">EKG Analyzer</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sensorID">Sensor ID</string>

    <string name="arrhythmia">Arrhythmia</string>
    <string name="atrial_fibrillation">Atrial Fibrillation</string>
    <string name="atrial_flutters">Atrial Flutters</string>
    <string name="asystole">Asystole</string>
    <string name="bundle_block">Bundle Block</string>
    <string name="dysrhythmia">Dysrhythmia</string>
    <string name="heart_failure">Heart Failure</string>
    <string name="myocardial">Myocardial Infarction</string>
    <string name="myocarditis">Myocarditis</string>
    <string name="sinus_rhythm">Sinus Rhythm</string>
    <string name="valvular_disease">Valvular Heart Disease</string>


    <string name="live_ekg">Live EKG</string>
    <string name="log_out">Log Out</string>
    <string name="rhythms">Conditions Information</string>
    <string name="history">History</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="normal">Normal</string>
    <string name="bpm">--</string>
    <string name="predicted_condition_s">Predicted Condition(s)</string>
    <string name="heart_rate">Heart rate:</string>
    <string name="condition_information">Condition Information</string>
</resources>

