<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/sinus_rhythm"
            android:title="@string/sinus_rhythm" />

        <item
            android:id="@+id/atrial_fibrillation"
            android:title="@string/atrial_fibrillation" />

        <item
            android:id="@+id/atrial_flutters"
            android:title="@string/atrial_flutters" />

        <item
            android:id="@+id/asystole"
            android:title="@string/asystole" />

        <item
            android:id="@+id/bundle_block"
            android:title="@string/bundle_block" />
        <item
            android:id="@+id/live_ekg"
            android:title="@string/live_ekg" />
        <item
            android:id="@+id/log_out"
            android:title="@string/log_out" />
    </group>
</menu>