<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/emailTextField"
            android:hint="@string/email"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordTextField"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/sensorIDTextField"
            android:hint="@string/sensorID"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:inputType="text" />

        <Button
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:onClick="signUp"
            android:layout_weight="1"
            android:text="@string/sign_up" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>