<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HistoricEKGActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:theme="@style/NavigationMenuTheme" />

        <com.jjoe64.graphview.GraphView
            android:id="@+id/ekgGraphView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintTop_toBottomOf="@+id/textBPM" />

        <TextView
            android:id="@+id/textConditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normal"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textConditionHeader" />

        <TextView
            android:id="@+id/textBPM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/bpm"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@+id/textHeartRateLabel"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/textConditionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/predicted_condition_s"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ekgGraphView" />

        <TextView
            android:id="@+id/textHeartRateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="100dp"
            android:paddingTop="14dp"
            android:paddingEnd="5dp"
            android:text="@string/heart_rate"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:theme="@style/NavigationMenuTheme"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/navigation_menu" />

</android.support.v4.widget.DrawerLayout>